fix:update to swagger setting for user api
